commited few changes

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "react-optimize",
   "version": "1.0.0",
   "description": "\"this is react in depth understand the concepts till i perfect in react\" ",
-  "main": "App.js",
   "scripts": {
-    "test": "jest"
+    "start": "parcel index.html",
+    "test": "jest",
+    "build": "parcel build index.html"
+  
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,13 @@
   "bugs": {
     "url": "https://github.com/loki4514/React-Optimize/issues"
   },
-  "homepage": "https://github.com/loki4514/React-Optimize#readme"
+  "homepage": "https://github.com/loki4514/React-Optimize#readme",
+  "devDependencies": {
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
